tests/NormalTests/paczka1/fuzzy1/47795341.err
Error in line 6: 2TvrxQgd1zB S537 58,4
Error in line 9: cvPCF2vl S818 53,76
Error in line 7: 2TvrxQgd1zB S818 97,3
Error in line 8: S818 A157 28,4
Error in line 23: S818 A881 81,3
Error in line 27: S818 S537 17,5
Error in line 36: S818 A881 59,6
